# napalm-geminicli-extension

./: LICENSE  README.md  gemini-extension.json  pyproject.toml
servers/: GEMINI.md  inventory.yaml  main.py
