[project]
name = "napalm-geminicli-extension"
version = "0.1.0"
description = "NAPALM GeminiCLI extension"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.1",
    "napalm>=5.1.0",
    "pyaml>=25.7.0",
    "tiktoken>=0.12.0",
    "toon-format>=0.1.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "F", "N", "W", "E"]
ignore = ["E501"]

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }
